docs: gen new swagger
