# docs/swagger.json
@@ -1,25 +1,21 @@
 {
-    "schemes": [
-        "http",
-        "https"
-    ],
     "swagger": "2.0",
     "info": {
         "description": "API для управления заказами",
         "title": "Order Service API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "API Support",
-            "email": "support@example.com"
+            "name": "API Creator",
+            "email": "stormkillpeople@gmail.com"
         },
         "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "name": "MIT-0",
+            "url": "https://github.com/aws/mit-0"
         },
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
         "/orders/{order_uid}": {
             "get": {
@@ -47,19 +43,7 @@
                     "200": {
                         "description": "Успешный ответ с данными заказа",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/httpt.SuccessResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/httpt.Order"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/httpt.SuccessResponse"
                         }
                     },
                     "400": {
@@ -240,19 +224,12 @@
         "httpt.ErrorResponse": {
             "type": "object",
             "properties": {
-                "details": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
                 "error": {
-                    "type": "string"
-                },
-                "message": {
                     "type": "string"
                 }
             }
         },
-        "httpt.Order": {
+        "httpt.SuccessResponse": {
             "type": "object",
             "required": [
                 "customer_id",
@@ -324,22 +301,6 @@
                     "maxLength": 50
                 }
             }
-        },
-        "httpt.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                }
-            }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
